@@ -1,3 +1,6 @@
+  107 Luca Falavigna	2008-08-07
+      Move away from globals.py
+
   106 Luca Falavigna	2008-08-07
       Code reorganization, some files merged
 
